# NTO-23-24

./: test.py
ИРС/Final/: .gitignore  pull.zsh  push.zsh
ИРС/Final/.old/arduino/: bluetooth.py
ИРС/Final/.old/docker-communication/: Dockerfile  docker-compose.yaml  requirements.txt  run.sh
ИРС/Final/.old/graphMarkup/: main.py  map.json
ИРС/Final/.old/pre-final/: camera.py
ИРС/Final/arduino/example_motor/: Motor.h
ИРС/Final/distortion/: calibration.py  connection.py  stitcher.py
ИРС/Final/distortion/dataset/: collectImages.py
ИРС/Final/docker/: docker-compose.yaml  run.sh
ИРС/Final/nto/: final.py
ИРС/Индивидуальные задачи/: aruco-dict-3X3-383.json  ex2.2.2.py  ex3.1.py  sampleData.json
ИРС/Индивидуальные задачи/modules/: utils.py
ИРС/Индивидуальные задачи/scripts/: HSVCalib.py  detectArucoByCV2.py  generateSampleData.py
ИРС/Командные задачи/: test.py  tewwef.py
ИРС/Командные задачи/NTO-docker/: Dockerfile  build.zsh  clear.zsh  close.zsh  in.zsh  run.zsh
ИРС/Командные задачи/NTO-docker/workspace/nto_robotics/cpp/: CMakeLists.txt
ИРС/Командные задачи/NTO-docker/workspace/nto_robotics/cpp/include/: Robot.hpp  Task.hpp
ИРС/Командные задачи/NTO-docker/workspace/nto_robotics/cpp/src/: solution1.cpp  solution6.cpp
КЗ/2 этап/Индивидуальные задачи/: ex2.1.1.py  ex2.1.2.py  ex2.1.3.1.py  ex2.1.3.2.py  ex2.2.3.1.py  ex2.2.3.2.py
КЗ/2 этап/Командные задачи/: HSVCalib.py  readme.txt
КЗ/final/tasks/: aruco.py
ППТ/2 этап/Командные задачи/: ex3.1.py  ex4.1.5.py  main_proverka.py
предметный тур/информатика и программирование/1 волна/: ex1.py
(+167 files in other folders)
